--- a/contacto.html
+++ b/contacto.html
@@ -2,97 +2,128 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="Somos una empresa, dedicada a la venta de repuestos y reparación para frenos y embragues. Estamos en la localidad de La Tablada.">
-  <meta name="keywords"
-    content="FRENOS Y EMBRAGUES UNION,LA TABLADA, FRENOS, EMBRAGUES, RESPUESTOS, REPARACION, BOMBA DE FRENO, RECTIFICACION DE CAMPANA Y DISCO">
-  <link rel="stylesheet" href="flaticon/flaticon.css" />
-  <link rel="stylesheet" href="css/style.css">
-  <title>Contacto - Frenos y Embragues Union</title>
-  <script src="https://kit.fontawesome.com/44980252ee.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Somos una empresa, dedicada a la venta de repuestos y reparación para frenos y embragues. Estamos en la localidad de La Tablada.">
+    <meta name="keywords"
+        content="FRENOS Y EMBRAGUES UNION,LA TABLADA, FRENOS, EMBRAGUES, RESPUESTOS, REPARACION, BOMBA DE FRENO, RECTIFICACION DE CAMPANA Y DISCO">
+    <link rel="stylesheet" href="flaticon/flaticon.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Contacto - Frenos y Embragues Union</title>
+    <script src="https://kit.fontawesome.com/44980252ee.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- header -->
+    <header class="header">
+        <nav class="header__nav">
+            <div class="header__nav__logo">
+                <a class="header__nav__logo__link" href="index.html">
+                    <i class="header__nav__logo__link__icon flaticon-disco-de-embrague"></i>
+                    <p class="header__nav__logo__link__nombre">Frenos y <br> Embragues Union</p>
+                </a>
+            </div>
 
-  <header class="header">
-    <nav class="header__nav">
-      <div class="header__nav__logo">
-        <a class="header__nav__logo__link" href="index.html">
-          <i class="header__nav__logo__link__icon flaticon-disco-de-embrague"></i>
-          <p class="header__nav__logo__link__nombre">Frenos y <br> Embragues Union</p>
-        </a>
-      </div>
+            <button class="header__nav__btn">
+                <i class="header__nav__btn__icon fas fa-bars"></i>
+            </button>
 
-      <button class="header__nav__btn">
-        <i class="header__nav__btn__icon fas fa-bars"></i>
-      </button>
+            <div class="header__nav__menu">
+                <ul class="header__nav__menu__list m-0">
+                    <li class="header__nav__menu__list__item">
+                        <a href="index.html" class="header__nav__menu__list__item__link">Inicio</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="productos.html" class="header__nav__menu__list__item__link">Productos</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="servicios.html" class="header__nav__menu__list__item__link">Servicios</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="sobre_nosotros.html" class="header__nav__menu__list__item__link">Sobre Nosotros</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="contacto.html" class="header__nav__menu__list__item__link">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-      <div class="header__nav__menu">
-        <ul class="header__nav__menu__list">
-          <li class="header__nav__menu__list__item">
-            <a href="index.html" class="header__nav__menu__list__item__link">Inicio</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="productos.html" class="header__nav__menu__list__item__link">Productos</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="servicios.html" class="header__nav__menu__list__item__link">Servicios</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="sobre_nosotros.html" class="header__nav__menu__list__item__link">Sobre Nosotros</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="contacto.html" class="header__nav__menu__list__item__link">Contacto</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-  <section class="contacto">
-    <h2 class="contacto__titulo">Contacto</h2>
-    <h3 class="contacto__subtitulo">Nesecitas asesoramiento? Contactanos haciendo click en los siguientes enlaces
-    </h3>
-    <div class="contacto__contenedor">
-      <div class="contacto__contenedor__galeria">
-        <a href="tel:+5492304356514" class="contacto__contenedor__galeria__link">
-          <i class="contacto__contenedor__galeria__link__icono fas fa-phone-alt"></i>
-          <p class="contacto__contenedor__galeria__link__texto">Telefono</p>
-        </a>
-        <a href="http://wa.me/5492304356514" class="contacto__contenedor__galeria__link">
-          <i class="contacto__contenedor__galeria__link__icono fab fa-whatsapp"></i>
-          <p class="contacto__contenedor__galeria__link__texto">Whatsapp</p>
-        </a>
-        <a href="mailto:embraguesunion@gmail.com" class="contacto__contenedor__galeria__link">
-          <i class="contacto__contenedor__galeria__link__icono fas fa-envelope"></i>
-          <p class="contacto__contenedor__galeria__link__texto">E-mail</p>
-        </a>
-      </div>
-      <div class="contacto__contenedor__mapa">
+    <section class="m-heigth container-fluid p-0">
         <iframe
-          src="
+            src="
         https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.6894670802844!2d-58.53164118481152!3d-34.68778608043781!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc8c7a4e11f5f%3A0x1a9c97be0feda1e4!2sFrenos%20Y%20Embragues%20Union!5e0!3m2!1ses!2sar!4v1633070129438!5m2!1ses!2sar"
-          class="contacto__contenedor__mapa__iframe" style="border: 0;" allowfullscreen="" loading="lazy">
+            class="w-100 contacto__mapa" style="border: 0;" allowfullscreen="" loading="lazy">
         </iframe>
-      </div>
+        <div class="container mt-3">
+            <div class="container text-center">
+                <h2 class="contendio__subtitulo pb-md-2 pb-lg-3">
+                    Contacto
+                </h2>
+                <hr>
+            </div>
+            <div class="row my-3">
+                <div class="m-0 p-0 mx-auto col-lg-4 col-12 row text-center">
+                    <a href="tel:+5492304356514" class="text-dark fs-2 col-12 my-3">
+                        <i class="fas fa-phone-alt fs-1 pe-2"></i>
+                        Telefono
+                    </a>
+                    <a href="http://wa.me/5492304356514" class="text-dark fs-2 col-12 my-3">
+                        <i class="fab fa-whatsapp fs-1 pe-2"></i>Whatsapp
+                    </a>
+                    <a href="mailto:embraguesunion@gmail.com" class="text-dark fs-2 col-12 my-3">
+                        <i class="fas fa-envelope fs-1 pe-2"></i>E-mail
+                    </a>
+                </div>
+                <form id="form" class="col-lg-8 col-12 row border rounded p-3 mx-auto">
+                    <div class="mb-3 col-lg-6 col-12">
+                        <label for="inputEmail" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="inputEmail" name="inputEmail" required>
+                    </div>
+                    <div class="mb-3 col-lg-6 col-12">
+                        <label for="asuntoInput" class="form-label">Asunto</label>
+                        <input type="text" class="form-control" id="asuntoInput" name="asuntoInput" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="textInput" class="form-label">Mensaje</label>
+                        <textarea class="form-control" id="textInput" name="textInput" rows="3" required></textarea>
+                    </div>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                        <button type="submit" class="btn btn-primary">Enviar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- boton whatsapp -->
+    <div class="btn-wsp position-fixed m-4 bottom-0 end-0">
+        <a href="http://wa.me/5492304356514" class="contacto__contenedor__galeria__link" target="_blank">
+            <img class="img-wsp" src="img/btnwsp.png" alt="boton para comunicarse por whatsapp">
+        </a>
     </div>
-  </section>
 
-  <section class="footer">
-    <p class="footer__texto">
-      2021 ©
-      <a class="footer__texto__link" href="https://github.com/martin9623" target="_blank">
-        @martin9623
-      </a>
-      Todos los
-      derechos reservados
-    </p>
-  </section>
+    <!-- footer -->
+    <section>
+        <p class="m-0 text-center text-muted">
+            2021 ©
+            <a class="text-dark text-muted" href="https://github.com/martin9623" target="_blank">
+                @martin9623
+            </a>
+            Todos los
+            derechos reservados
+        </p>
+    </section>
 
-  <script src="script/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="script/script.js"></script>
 </body>
 
 </html>
