--- a/index.html
+++ b/index.html
@@ -2,80 +2,143 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="Somos una empresa, dedicada a la venta de repuestos y reparación para frenos y embragues. Estamos en la localidad de La Tablada.">
-  <meta name="keywords"
-    content="FRENOS Y EMBRAGUES UNION,LA TABLADA, FRENOS, EMBRAGUES, RESPUESTOS, REPARACION, BOMBA DE FRENO, RECTIFICACION DE CAMPANA Y DISCO">
-  <link rel="stylesheet" href="flaticon/flaticon.css" />
-  <link rel="stylesheet" href="css/style.css">
-  <title>Inicio - Frenos y Embragues Union</title>
-  <script src="https://kit.fontawesome.com/44980252ee.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Somos una empresa, dedicada a la venta de repuestos y reparación para frenos y embragues. Estamos en la localidad de La Tablada.">
+    <meta name="keywords"
+        content="FRENOS Y EMBRAGUES UNION,LA TABLADA, FRENOS, EMBRAGUES, RESPUESTOS, REPARACION, BOMBA DE FRENO, RECTIFICACION DE CAMPANA Y DISCO">
+    <link rel="stylesheet" href="flaticon/flaticon.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Inicio - Frenos y Embragues Union</title>
+    <script src="https://kit.fontawesome.com/44980252ee.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- header -->
+    <header class="header">
+        <nav class="header__nav">
+            <div class="header__nav__logo">
+                <a class="header__nav__logo__link" href="index.html">
+                    <i class="header__nav__logo__link__icon flaticon-disco-de-embrague"></i>
+                    <p class="header__nav__logo__link__nombre">Frenos y <br> Embragues Union</p>
+                </a>
+            </div>
 
-  <header class="header">
-    <nav class="header__nav">
-      <div class="header__nav__logo">
-        <a class="header__nav__logo__link" href="index.html">
-          <i class="header__nav__logo__link__icon flaticon-disco-de-embrague"></i>
-          <p class="header__nav__logo__link__nombre">Frenos y <br> Embragues Union</p>
+            <button class="header__nav__btn">
+                <i class="header__nav__btn__icon fas fa-bars"></i>
+            </button>
+
+            <div class="header__nav__menu">
+                <ul class="header__nav__menu__list m-0">
+                    <li class="header__nav__menu__list__item">
+                        <a href="index.html" class="header__nav__menu__list__item__link">Inicio</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="productos.html" class="header__nav__menu__list__item__link">Productos</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="servicios.html" class="header__nav__menu__list__item__link">Servicios</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="sobre_nosotros.html" class="header__nav__menu__list__item__link">Sobre Nosotros</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="contacto.html" class="header__nav__menu__list__item__link">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <section class="m-heigth carousel-global">
+        <!-- carousel -->
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-global__texto">
+                <div class="carousel-global__texto__carousel">
+                    <h1 class="carousel-global__texto__carousel__titulo">Frenos y <br />embragues Union</h1>
+                    <div class="carousel-global__texto__carousel__contacto">
+                        <a href="contacto.html" class="carousel-global__texto__carousel__contacto__link">Contactanos</a>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="3000">
+                    <img src="img/carousel/banner_1.jpg" class="carousel__img d-block " alt="Imagen embrague">
+                </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="img/carousel/banner_2.jpg" class="carousel__img d-block" alt="Imagen instalando embrague">
+                </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="img/carousel/banner_3.jpg" class="carousel__img d-block" alt="Imagen freno">
+                </div>
+            </div>
+        </div>
+
+        <!-- Contenido pagina -->
+        <div class="mt-3 mb-5">
+            <div class="container text-center pb-2">
+                <h2 class="contendio__subtitulo pb-3 pb-md-2 pb-lg-3">
+                    Para linea pesada y liviana <br> Reparaciones
+                    <br> Asesoramiento Tecnico
+                </h2>
+                <hr>
+            </div>
+            <div class="row mx-0 my-lg-5 text-center">
+                <div class="col-md-3 col-sm-6 ">
+                    <div class="fs-1">
+                        <i class="border border-3 rounded-circle border-danger p-2 fas fa-flag-checkered"></i>
+                    </div>
+                    <p class="pt-3 fs-2">Tecnología de <br> avanzada</p>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="fs-1">
+                        <i class="border border-3 rounded-circle border-danger p-2 fas fa-flag-checkered"></i>
+                    </div>
+                    <p class="pt-3 fs-2">Continua <br> capacitación</p>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="fs-1">
+                        <i class="border border-3 rounded-circle border-danger p-2 fas fa-flag-checkered"></i>
+                    </div>
+                    <p class="pt-3 fs-2">Calidad y <br> servicio</p>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="fs-1">
+                        <i class="border border-3 rounded-circle border-danger p-2 fas fa-flag-checkered"></i>
+                    </div>
+                    <p class="pt-3 fs-2">Años de <br> experiencia</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- boton whatsapp -->
+    <div class="btn-wsp position-fixed m-4 bottom-0 end-0">
+        <a href="http://wa.me/5492304356514" class="contacto__contenedor__galeria__link" target="_blank">
+            <img class="img-wsp" src="img/btnwsp.png" alt="boton para comunicarse por whatsapp">
         </a>
-      </div>
-
-      <button class="header__nav__btn">
-        <i class="header__nav__btn__icon fas fa-bars"></i>
-      </button>
-
-      <div class="header__nav__menu">
-        <ul class="header__nav__menu__list">
-          <li class="header__nav__menu__list__item">
-            <a href="index.html" class="header__nav__menu__list__item__link">Inicio</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="productos.html" class="header__nav__menu__list__item__link">Productos</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="servicios.html" class="header__nav__menu__list__item__link">Servicios</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="sobre_nosotros.html" class="header__nav__menu__list__item__link">Sobre Nosotros</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="contacto.html" class="header__nav__menu__list__item__link">Contacto</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-  <section class="inicio">
-    <div class="inicio__texto">
-      <h1 class="inicio__texto__titulo">Frenos y <br />embragues</h1>
-      <h2 class="inicio__texto__subtitulo">Para linea pesada y liviana</h2>
-      <h2 class="inicio__texto__subtitulo">Reparaciones</h2>
-      <h2 class="inicio__texto__subtitulo">Asesoramiento Tecnico</h2>
-      <div class="inicio__texto__contacto">
-        <a href="contacto.html" class="inicio__texto__contacto__link">Contactanos</a>
-      </div>
     </div>
-  </section>
 
-  <section class="footer">
-    <p class="footer__texto">
-      2021 ©
-      <a class="footer__texto__link" href="https://github.com/martin9623" target="_blank">
-        @martin9623
-      </a>
-      Todos los
-      derechos reservados
-    </p>
-  </section>
+    <!-- footer -->
+    <section>
+        <p class="m-0 text-center text-muted">
+            2021 ©
+            <a class="text-dark text-muted" href="https://github.com/martin9623" target="_blank">
+                @martin9623
+            </a>
+            Todos los
+            derechos reservados
+        </p>
+    </section>
 
-  <script src="script/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="script/script.js"></script>
 </body>
 
 </html>
