--- a/productos.html
+++ b/productos.html
@@ -2,78 +2,312 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="Somos una empresa, dedicada a la venta de repuestos y reparación para frenos y embragues. Estamos en la localidad de La Tablada.">
-  <meta name="keywords"
-    content="FRENOS Y EMBRAGUES UNION,LA TABLADA, FRENOS, EMBRAGUES, RESPUESTOS, REPARACION, BOMBA DE FRENO, RECTIFICACION DE CAMPANA Y DISCO">
-  <link rel="stylesheet" href="flaticon/flaticon.css" />
-  <link rel="stylesheet" href="css/style.css">
-  <title>Productos - Frenos y Embragues Union</title>
-  <script src="https://kit.fontawesome.com/44980252ee.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Somos una empresa, dedicada a la venta de repuestos y reparación para frenos y embragues. Estamos en la localidad de La Tablada.">
+    <meta name="keywords"
+        content="FRENOS Y EMBRAGUES UNION,LA TABLADA, FRENOS, EMBRAGUES, RESPUESTOS, REPARACION, BOMBA DE FRENO, RECTIFICACION DE CAMPANA Y DISCO">
+    <link rel="stylesheet" href="flaticon/flaticon.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Productos - Frenos y Embragues Union</title>
+    <script src="https://kit.fontawesome.com/44980252ee.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- header -->
+    <header class="header">
+        <nav class="header__nav">
+            <div class="header__nav__logo">
+                <a class="header__nav__logo__link" href="index.html">
+                    <i class="header__nav__logo__link__icon flaticon-disco-de-embrague"></i>
+                    <p class="header__nav__logo__link__nombre">Frenos y <br> Embragues Union</p>
+                </a>
+            </div>
 
-  <header class="header">
-    <nav class="header__nav">
-      <div class="header__nav__logo">
-        <a class="header__nav__logo__link" href="index.html">
-          <i class="header__nav__logo__link__icon flaticon-disco-de-embrague"></i>
-          <p class="header__nav__logo__link__nombre">Frenos y <br> Embragues Union</p>
+            <button class="header__nav__btn">
+                <i class="header__nav__btn__icon fas fa-bars"></i>
+            </button>
+
+            <div class="header__nav__menu">
+                <ul class="header__nav__menu__list m-0">
+                    <li class="header__nav__menu__list__item">
+                        <a href="index.html" class="header__nav__menu__list__item__link">Inicio</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="productos.html" class="header__nav__menu__list__item__link">Productos</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="servicios.html" class="header__nav__menu__list__item__link">Servicios</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="sobre_nosotros.html" class="header__nav__menu__list__item__link">Sobre Nosotros</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="contacto.html" class="header__nav__menu__list__item__link">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <!-- contenido pagina -->
+    <section class="m-heigth">
+        <!-- carousel -->
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="3000">
+                    <img src="img/carousel/producto_1.jpg" class="carousel__img d-block " alt="Imagen repuesto Luk">
+                </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="img/carousel/producto_2.jpg" class="carousel__img d-block" alt="Imagen repuesto Sachs">
+                </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="img/carousel/producto_3.jpg" class="carousel__img d-block" alt="Imagen respuesto Valeo">
+                </div>
+            </div>
+        </div>
+
+        <!-- Tira imagenes de marcas -->
+        <div class="marcas container my-3 p-4">
+            <img class="marcas__img" src="img/productos/valeo.png" alt="Repuesto valeo">
+            <img class="marcas__img" src="img/productos/sachs.png" alt="Repuesto sachs">
+            <img class="marcas__img" src="img/productos/luk.png" alt="Repuesto Luk">
+        </div>
+
+        <!-- Botones contenedores de listas -->
+        <div class="row my-3 mx-md-5 mx-auto">
+            <!-- embragues -->
+            <div class="col-md-6 my-3">
+                <button
+                    class="btn btn-outline-danger text-dark w-100 fs-3 d-flex align-items-center justify-content-between"
+                    type="button" data-bs-toggle="collapse" data-bs-target="#collapseEmbrague" aria-expanded="false"
+                    aria-controls="collapseEmbrague">
+                    <i class="fas fa-flag-checkered"></i>
+                    Embragues
+                    <i class="fas fa-angle-up"></i>
+                </button>
+                <div class="collapse show" id="collapseEmbrague">
+                    <div class="card card-body">
+                        <ul class="list-unstyled">
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Actuadores hidraulicos
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Balancines
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Bomba y Bombin de embrague
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Cable de embrague
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Criqueras
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Embragues nuevos
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Embragues reparados
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Grasa de caja
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Horquillas
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Palanca de reenvios
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Reten de bancada y cigüeñal
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Rulemanes de empuje
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Soportes de caja y motor
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Rectificado de Volantes
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Reparaciones de bomba y Bombin de embragues
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Balanceo de cigüeñales-cardan y embragues
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- frenos -->
+            <div class="col-md-6 my-3">
+                <button
+                    class="btn btn-outline-danger text-dark w-100 fs-3  d-flex align-items-center justify-content-between"
+                    type="button" data-bs-toggle="collapse" data-bs-target="#collapseFrenos" aria-expanded="false"
+                    aria-controls="collapseFrenos">
+                    <i class="fas fa-flag-checkered"></i>
+                    Frenos
+                    <i class="fas fa-angle-up"></i>
+                </button>
+                <div class="collapse show" id="collapseFrenos">
+                    <div class="card card-body">
+                        <ul class="list-unstyled">
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Antivibradores de pastillas
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Bomba de Freno
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Bombas de Vacio
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Cable de Freno
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Caliper de freno
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Cilindros de freno
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Cubetas
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Discos y campanas
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Flexibles de Freno
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Fuelles y Homocineticas
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Guardapolvos
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Maza de rueda
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Palancas de freno de mano
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Pastillas
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Pernos deslizantes
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Rectificado de discos y campanas
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Registros y Reguladores
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Reparaciones de Caliper y bombas de freno
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Retenes de rueda
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Resortes
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Rulemanes de Rueda
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Sensores de Pastillas
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Servo Freno
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Tapas graseras
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Valvulas compensadores Valvulas ecualizadoras
+                            </li>
+                            <li class="fs-4 py-1">
+                                <i class="fab fa-superpowers"></i>
+                                Zapatas de frenos
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- boton whatsapp -->
+    <div class="btn-wsp position-fixed m-4 bottom-0 end-0">
+        <a href="http://wa.me/5492304356514" class="contacto__contenedor__galeria__link" target="_blank">
+            <img class="img-wsp" src="img/btnwsp.png" alt="boton para comunicarse por whatsapp">
         </a>
-      </div>
-
-      <button class="header__nav__btn">
-        <i class="header__nav__btn__icon fas fa-bars"></i>
-      </button>
-
-      <div class="header__nav__menu">
-        <ul class="header__nav__menu__list">
-          <li class="header__nav__menu__list__item">
-            <a href="index.html" class="header__nav__menu__list__item__link">Inicio</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="productos.html" class="header__nav__menu__list__item__link">Productos</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="servicios.html" class="header__nav__menu__list__item__link">Servicios</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="sobre_nosotros.html" class="header__nav__menu__list__item__link">Sobre Nosotros</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="contacto.html" class="header__nav__menu__list__item__link">Contacto</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-  <section class="productos">
-    <h2 class="productos__titulo">Productos</h2>
-    <h3 class="productos__texto">trabajamos con las principales marcas.</h3>
-    <div class="productos__galeria">
-      <img class="productos__galeria__img" src="img/productos/valeo.png" alt="Repuesto valeo">
-      <img class="productos__galeria__img" src="img/productos/sachs.png" alt="Repuesto sachs">
-      <img class="productos__galeria__img" src="img/productos/luk.png" alt="Repuesto Luk">
     </div>
-  </section>
 
-  <section class="footer">
-    <p class="footer__texto">
-      2021 ©
-      <a class="footer__texto__link" href="https://github.com/martin9623" target="_blank">
-        @martin9623
-      </a>
-      Todos los
-      derechos reservados
-    </p>
-  </section>
+    <!-- footer -->
+    <section>
+        <p class="m-0 text-center text-muted">
+            2021 ©
+            <a class="text-dark text-muted" href="https://github.com/martin9623" target="_blank">
+                @martin9623
+            </a>
+            Todos los
+            derechos reservados
+        </p>
+    </section>
 
-  <script src="script/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="script/script.js"></script>
 </body>
 
 </html>
