--- a/servicios.html
+++ b/servicios.html
@@ -2,93 +2,134 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="Somos una empresa, dedicada a la venta de repuestos y reparación para frenos y embragues. Estamos en la localidad de La Tablada.">
-  <meta name="keywords"
-    content="FRENOS Y EMBRAGUES UNION,LA TABLADA, FRENOS, EMBRAGUES, RESPUESTOS, REPARACION, BOMBA DE FRENO, RECTIFICACION DE CAMPANA Y DISCO">
-  <link rel="stylesheet" href="flaticon/flaticon.css" />
-  <link rel="stylesheet" href="css/style.css">
-  <title>Servicios - Frenos y Embragues Union</title>
-  <script src="https://kit.fontawesome.com/44980252ee.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Somos una empresa, dedicada a la venta de repuestos y reparación para frenos y embragues. Estamos en la localidad de La Tablada.">
+    <meta name="keywords"
+        content="FRENOS Y EMBRAGUES UNION,LA TABLADA, FRENOS, EMBRAGUES, RESPUESTOS, REPARACION, BOMBA DE FRENO, RECTIFICACION DE CAMPANA Y DISCO">
+    <link rel="stylesheet" href="flaticon/flaticon.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Servicios - Frenos y Embragues Union</title>
+    <script src="https://kit.fontawesome.com/44980252ee.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- header -->
+    <header class="header">
+        <nav class="header__nav">
+            <div class="header__nav__logo">
+                <a class="header__nav__logo__link" href="index.html">
+                    <i class="header__nav__logo__link__icon flaticon-disco-de-embrague"></i>
+                    <p class="header__nav__logo__link__nombre">Frenos y <br> Embragues Union</p>
+                </a>
+            </div>
 
-  <header class="header">
-    <nav class="header__nav">
-      <div class="header__nav__logo">
-        <a class="header__nav__logo__link" href="index.html">
-          <i class="header__nav__logo__link__icon flaticon-disco-de-embrague"></i>
-          <p class="header__nav__logo__link__nombre">Frenos y <br> Embragues Union</p>
+            <button class="header__nav__btn">
+                <i class="header__nav__btn__icon fas fa-bars"></i>
+            </button>
+
+            <div class="header__nav__menu">
+                <ul class="header__nav__menu__list m-0">
+                    <li class="header__nav__menu__list__item">
+                        <a href="index.html" class="header__nav__menu__list__item__link">Inicio</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="productos.html" class="header__nav__menu__list__item__link">Productos</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="servicios.html" class="header__nav__menu__list__item__link">Servicios</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="sobre_nosotros.html" class="header__nav__menu__list__item__link">Sobre Nosotros</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="contacto.html" class="header__nav__menu__list__item__link">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <section class="m-heigth">
+        <!-- carousel -->
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-global__texto">
+                <div class="carousel-global__texto__carousel">
+                    <h1 class="carousel-global__texto__carousel__titulo">Servicios</h1>
+                </div>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="3000">
+                    <img src="img/carousel/banner_1.jpg" class="carousel__img d-block " alt="Imagen embrague">
+                </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="img/carousel/banner_2.jpg" class="carousel__img d-block" alt="Imagen instalando embrague">
+                </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="img/carousel/banner_3.jpg" class="carousel__img d-block" alt="Imagen freno">
+                </div>
+            </div>
+        </div>
+
+        <div class="container mt-3 mb-5">
+            <div class="container text-center pb-2">
+                <h2 class="contendio__subtitulo pb-3 pb-md-2 pb-lg-3">
+                    Servicios <br> Para linea pesada y liviana <br> Reparaciones <br>
+                    Asesoramiento Tecnico
+                </h2>
+                <hr>
+            </div>
+            <div class="d-flex align-items-center justify-content-between">
+                <i class="fas fa-cog fs-1"></i>
+                <h3 class="m-0 ps-3">Reparacion de embragues</h3>
+                <a class="btn btn-danger btn-servicios fs-5" href="contacto.html">+Info</a>
+            </div>
+            <div class=" my-3 ps-2 d-flex">
+                <i class="fas fa-ellipsis-v fs-1 ps-1"></i>
+            </div>
+            <div class="d-flex align-items-center justify-content-between">
+                <i class="fas fa-cog fs-1"></i>
+                <h3 class="m-0 ps-3">Reparación de bomba de freno</h3>
+                <a class="btn btn-danger btn-servicios fs-5" href="contacto.html">+Info</a>
+            </div>
+            <div class="my-3 ps-2">
+                <i class="fas fa-ellipsis-v fs-1 ps-1"></i>
+            </div>
+            <div class="d-flex align-items-center justify-content-between">
+                <i class="fas fa-cog fs-1"></i>
+                <h3 class="m-0 ps-3">Rectificación de campana y disco</h3>
+                <a class="btn btn-danger btn-servicios fs-5" href="contacto.html" class="text-center">+Info</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- boton whatsapp -->
+    <div class="btn-wsp position-fixed m-4 bottom-0 end-0">
+        <a href="http://wa.me/5492304356514" class="contacto__contenedor__galeria__link" target="_blank">
+            <img class="img-wsp" src="img/btnwsp.png" alt="boton para comunicarse por whatsapp">
         </a>
-      </div>
-
-      <button class="header__nav__btn">
-        <i class="header__nav__btn__icon fas fa-bars"></i>
-      </button>
-
-      <div class="header__nav__menu">
-        <ul class="header__nav__menu__list">
-          <li class="header__nav__menu__list__item">
-            <a href="index.html" class="header__nav__menu__list__item__link">Inicio</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="productos.html" class="header__nav__menu__list__item__link">Productos</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="servicios.html" class="header__nav__menu__list__item__link">Servicios</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="sobre_nosotros.html" class="header__nav__menu__list__item__link">Sobre Nosotros</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="contacto.html" class="header__nav__menu__list__item__link">Contacto</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-  <section class="servicios">
-    <h2 class="servicios__titulo">Servicios</h2>
-    <h3 class="servicios__texto">trabajamos con las principales marcas.</h3>
-    <div class="servicios__galeria">
-      <div class="servicios__galeria__contenedor">
-        <img class="servicios__galeria__contenedor__img" src="img/servicios/reparacionEmbrague.jpg"
-          alt="servicio de reparacion de embrague">
-        <h3 class="servicios__galeria__contenedor__titulo">Reparación de embragues</h3>
-        <a href="contacto.html" class="servicios__galeria__contenedor__link">+ info</a>
-      </div>
-      <div class="servicios__galeria__contenedor">
-        <img class="servicios__galeria__contenedor__img" src="img/servicios/bombaFreno.jpg"
-          alt="servicio de reparacion de bomba de freno">
-        <h3 class="servicios__galeria__contenedor__titulo">Reparación de bomba de freno</h3>
-        <a href="contacto.html" class="servicios__galeria__contenedor__link">+ info</a>
-      </div>
-      <div class="servicios__galeria__contenedor">
-        <img class="servicios__galeria__contenedor__img" src="img/servicios/rectificacionCamp.jpg"
-          alt="servicio de rectificacion de campana y disco">
-        <h3 class="servicios__galeria__contenedor__titulo">Rectificación de campana y disco</h3>
-        <a href="contacto.html" class="servicios__galeria__contenedor__link">+ info</a>
-      </div>
     </div>
-  </section>
 
-  <section class="footer">
-    <p class="footer__texto">
-      2021 ©
-      <a class="footer__texto__link" href="https://github.com/martin9623" target="_blank">
-        @martin9623
-      </a>
-      Todos los
-      derechos reservados
-    </p>
-  </section>
+    <!-- footer -->
+    <section>
+        <p class="m-0 text-center text-muted">
+            2021 ©
+            <a class="text-dark text-muted" href="https://github.com/martin9623" target="_blank">
+                @martin9623
+            </a>
+            Todos los
+            derechos reservados
+        </p>
+    </section>
 
-  <script src="script/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="script/script.js"></script>
 </body>
 
 </html>
