--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -2,93 +2,143 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="Somos una empresa, dedicada a la venta de repuestos y reparación para frenos y embragues. Estamos en la localidad de La Tablada.">
-  <meta name="keywords"
-    content="FRENOS Y EMBRAGUES UNION,LA TABLADA, FRENOS, EMBRAGUES, RESPUESTOS, REPARACION, BOMBA DE FRENO, RECTIFICACION DE CAMPANA Y DISCO">
-  <link rel="stylesheet" href="flaticon/flaticon.css" />
-  <link rel="stylesheet" href="css/style.css">
-  <title>Sobre nosotros - Frenos y Embragues Union</title>
-  <script src="https://kit.fontawesome.com/44980252ee.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Somos una empresa, dedicada a la venta de repuestos y reparación para frenos y embragues. Estamos en la localidad de La Tablada.">
+    <meta name="keywords"
+        content="FRENOS Y EMBRAGUES UNION,LA TABLADA, FRENOS, EMBRAGUES, RESPUESTOS, REPARACION, BOMBA DE FRENO, RECTIFICACION DE CAMPANA Y DISCO">
+    <link rel="stylesheet" href="flaticon/flaticon.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Sobre nosotros - Frenos y Embragues Union</title>
+    <script src="https://kit.fontawesome.com/44980252ee.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- header -->
+    <header class="header">
+        <nav class="header__nav">
+            <div class="header__nav__logo">
+                <a class="header__nav__logo__link" href="index.html">
+                    <i class="header__nav__logo__link__icon flaticon-disco-de-embrague"></i>
+                    <p class="header__nav__logo__link__nombre">Frenos y <br> Embragues Union</p>
+                </a>
+            </div>
 
-  <header class="header">
-    <nav class="header__nav">
-      <div class="header__nav__logo">
-        <a class="header__nav__logo__link" href="index.html">
-          <i class="header__nav__logo__link__icon flaticon-disco-de-embrague"></i>
-          <p class="header__nav__logo__link__nombre">Frenos y <br> Embragues Union</p>
-        </a>
-      </div>
+            <button class="header__nav__btn">
+                <i class="header__nav__btn__icon fas fa-bars"></i>
+            </button>
 
-      <button class="header__nav__btn">
-        <i class="header__nav__btn__icon fas fa-bars"></i>
-      </button>
+            <div class="header__nav__menu">
+                <ul class="header__nav__menu__list m-0">
+                    <li class="header__nav__menu__list__item">
+                        <a href="index.html" class="header__nav__menu__list__item__link">Inicio</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="productos.html" class="header__nav__menu__list__item__link">Productos</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="servicios.html" class="header__nav__menu__list__item__link">Servicios</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="sobre_nosotros.html" class="header__nav__menu__list__item__link">Sobre Nosotros</a>
+                    </li>
+                    <li class="header__nav__menu__list__item">
+                        <a href="contacto.html" class="header__nav__menu__list__item__link">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-      <div class="header__nav__menu">
-        <ul class="header__nav__menu__list">
-          <li class="header__nav__menu__list__item">
-            <a href="index.html" class="header__nav__menu__list__item__link">Inicio</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="productos.html" class="header__nav__menu__list__item__link">Productos</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="servicios.html" class="header__nav__menu__list__item__link">Servicios</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="sobre_nosotros.html" class="header__nav__menu__list__item__link">Sobre Nosotros</a>
-          </li>
-          <li class="header__nav__menu__list__item">
-            <a href="contacto.html" class="header__nav__menu__list__item__link">Contacto</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
 
-  <section class="sobre_nosotros">
-    <h2 class="sobre_nosotros__titulo">Sobre nosotros</h2>
-    <div class="sobre_nosotros__contenedor">
-      <img src="img/sobreNosotros/sobreNosotros.jpg" alt="Taller Frenos y Embragues Union"
-        class="sobre_nosotros__contenedor__img">
-      <div class="sobre_nosotros__contenedor__texto">
-        <h3 class="sobre_nosotros__contenedor__texto__titulo">Frenos y Embragues Union es una pequeña empresa atendida
-          por sus propios dueños desde 1997</h3>
-        <ul class="sobre_nosotros__contenedor__texto__lista">
-          <li class="sobre_nosotros__contenedor__texto__lista__item">
-            Nos dedicamos a la venta y reparacion de respuestos automotor, especializados en frenos y embragues.
-          </li>
-          <li class="sobre_nosotros__contenedor__texto__lista__item">
-            Proveemos de todos los accesorios de frenos y embragues nuevos y reacondicionados a empresas, tanto a
-            talleres como a particulares.
-          </li>
-          <li class="sobre_nosotros__contenedor__texto__lista__item">
-            Debido a los años que contamos en el rubro nuestra experiencia nos permite trabajar con rapides y
-            responsabilidad.
-          </li>
-        </ul>
-      </div>
-    </div>
-  </section>
+    <section class="sobre_nosotros">
+        <!-- carousel -->
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-global__texto">
+                <div class="carousel-global__texto__carousel">
+                    <h1 class="carousel-global__texto__carousel__titulo">Sobre nosotros</h1>
+                </div>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="3000">
+                    <img src="img/carousel/banner_1.jpg" class="carousel__img d-block " alt="Imagen embrague">
+                </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="img/carousel/banner_2.jpg" class="carousel__img d-block" alt="Imagen instalando embrague">
+                </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="img/carousel/banner_3.jpg" class="carousel__img d-block" alt="Imagen freno">
+                </div>
+            </div>
+        </div>
 
-  <section class="footer">
-    <p class="footer__texto">
-      2021 ©
-      <a class="footer__texto__link" href="https://github.com/martin9623" target="_blank">
-        @martin9623
-      </a>
-      Todos los
-      derechos reservados
-    </p>
-  </section>
+        <div class="container mt-3 mb-5">
+            <div class="container text-center pb-2">
+                <h2 class="contendio__subtitulo pb-3 pb-md-2 pb-lg-3">
+                    Frenos y Embragues Union <br> es una pequeña empresa <br> atendida por sus propios dueños <br> desde
+                    1997
+                </h2>
+                <hr>
+            </div>
 
-  <script src="script/script.js"></script>
+            <div class="container">
+                <div class="d-flex align-items-center justify-content-between my-3">
+                    <i class="fab fa-superpowers fs-1"></i>
+                    <p class="m-0 ps-5 fs-3">Nos dedicamos a la venta y reparacion de respuestos automotor,
+                        especializados
+                        en
+                        frenos y
+                        embragues.</p>
+                </div>
+                <hr>
+                <div class="d-flex align-items-center justify-content-between my-3">
+                    <i class="fab fa-superpowers fs-1"></i>
+                    <p class="m-0 ps-5 fs-3">
+                        Proveemos de todos los accesorios de frenos y embragues nuevos y
+                        reacondicionados a
+                        empresas, tanto a
+                        talleres como a particulares.</p>
+                    <hr>
+                </div>
+                <hr>
+                <div class="d-flex align-items-center justify-content-between my-3">
+                    <i class="fab fa-superpowers fs-1"></i>
+                    <p class="m-0 ps-5 fs-3">Debido a los años que contamos en el rubro nuestra experiencia nos permite
+                        trabajar con
+                        rapides y
+                        responsabilidad.</p>
+                    <hr>
+                </div>
+            </div>
+        </div>
+
+        <!-- boton whatsapp -->
+        <div class="btn-wsp position-fixed m-4 bottom-0 end-0">
+            <a href="http://wa.me/5492304356514" class="contacto__contenedor__galeria__link" target="_blank">
+                <img class="img-wsp" src="img/btnwsp.png" alt="boton para comunicarse por whatsapp">
+            </a>
+        </div>
+
+        <!-- footer -->
+        <section>
+            <p class="m-0 text-center text-muted">
+                2021 ©
+                <a class="text-dark text-muted" href="https://github.com/martin9623" target="_blank">
+                    @martin9623
+                </a>
+                Todos los
+                derechos reservados
+            </p>
+        </section>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+        <script src="script/script.js"></script>
 </body>
 
 </html>
